--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.form-container{
+	padding:5px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.input-container{
+	display: flex;
+	flex-direction: column;
+	margin:35px;
+}
+
+.input{
+	border:none;
+	border-bottom: 1px solid blue;
+	padding:10px;
+}
+.input:focus {
+	border-color: orange;
+}
+.btn {
+	border:none;
+	background-color:blue;
+	padding:10px;
+	width:125px;
+	color:white;
+	position: relative;
+	left: 50%;
+	border-radius: 10px;
 }
